Replace existing files with updated version

--- a/seller.html
+++ b/seller.html
@@ -13,6 +13,28 @@
    min-height: 100vh;
    color: #222f3e;
  }
+ #new-order-popup {
+      display: none;
+      position: fixed;
+      top: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #ffeee8;
+      color: #c12a09;
+      border: 2px solid #e54b1c;
+      border-radius: 13px;
+      box-shadow: 0 10px 35px #e54b1c22, 0 1px 4px #ffd81418;
+      padding: 18px 38px;
+      font-weight: 700;
+      font-size: 1.17em;
+      z-index: 1111;
+      min-width: 230px;
+      text-align: center;
+      letter-spacing: .01em;
+    }
+    #new-order-popup button {
+      background:#d22508;color:#fff;border:none;border-radius:21px;padding:6px 24px;margin-left:18px;cursor:pointer;font-weight:bold;font-size:1em;
+    }
  nav {
    display: flex;
    justify-content: space-between;
@@ -351,6 +373,10 @@
     <button id="logout-btn">Logout</button>
     </div>
 </nav>
+<div id="new-order-popup">
+  <span id="new-order-text"></span>
+  <button onclick="document.getElementById('new-order-popup').style.display='none'">Close</button>
+</div>
 
 <form id="product-form">
   <input type="hidden" id="prod-id" />
@@ -390,30 +416,28 @@
     'https://wamqheltqmufuzrqlxlb.supabase.co',
     'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
   );
-async function showNewOrderPopup() {
-  const { data } = await supabase.auth.getUser();
-  if (!data || !data.user) return;
-  const sellerId = data.user.id;
 
-  // Find unique orders with seller's item(s) in placed or pending status
-  const { data: orderItems, error } = await supabase
-    .from('order_items')
-    .select('order_id')
-    .eq('seller_id', sellerId)
-    .in('delivery_status', ['placed','pending']);
-
-  if (error) return;
-
-  // Show popup if new orders exist
-  const uniqueOrderIds = Array.from(new Set((orderItems || []).map(i => i.order_id)));
-  if (uniqueOrderIds.length > 0) {
-    document.getElementById('orderNotifText').textContent =
-      `You have ${uniqueOrderIds.length} new order${uniqueOrderIds.length > 1 ? "s" : ""} placed!`;
-    document.getElementById('orderNotification').style.display = 'block';
+  // --- POPUP: New Seller Orders ---
+  async function checkNewOrdersPopup() {
+    const { data: { user } } = await supabase.auth.getUser();
+    if (!user) return;
+    const { data: orderItems, error } = await supabase
+      .from('order_items')
+      .select('order_id')
+      .eq('seller_id', user.id)
+      .in('delivery_status', ['placed', 'pending']);
+    if (error || !orderItems) return;
+    const uniqueOrders = Array.from(new Set(orderItems.map(i => i.order_id)));
+    if (uniqueOrders.length > 0) {
+      document.getElementById('new-order-text').textContent =
+        `You have ${uniqueOrders.length} new order${uniqueOrders.length > 1 ? "s" : ""} placed or pending.`;
+      document.getElementById('new-order-popup').style.display = 'block';
+    } else {
+      document.getElementById('new-order-popup').style.display = 'none';
+    }
   }
-}
-showNewOrderPopup();
-
+  // Run popup check on load and every 60s
+  setInterval(checkNewOrdersPopup, 60000);
   let sellerId = null, selectedFiles = [], existingImages = [];
   let allCategoriesList = [];
 
@@ -425,6 +449,8 @@ showNewOrderPopup();
       await loadCategories();
       await loadSellerProducts();
       await loadSellerReturns();
+      await checkNewOrdersPopup();
+
     } else {
       alert('Please log in first!');
       window.location.href = 'login.html';
