--- a/productdesc.html
+++ b/productdesc.html
@@ -14,7 +14,15 @@
     main { max-width: 1300px; margin: 2rem auto; background: #fff; border-radius: 10px; box-shadow: 0 2px 16px #e1e8ef; padding: 2rem; }
     .product-layout { display: flex; flex-wrap: wrap; gap: 2rem; }
     .left-content { flex: 1 1 420px; max-width: 450px; text-align: center; }
-    .left-content img { width: 90%; border-radius: 10px; box-shadow: 0 3px 12px #0001; }
+    .left-content img#mainImage {
+      width: 300px;
+      height: 300px;
+      object-fit: contain;
+      border-radius: 10px;
+      box-shadow: 0 3px 12px #0001;
+      cursor: zoom-in;
+      background: #fff;
+    }
     .thumbs { margin-top: 1rem; display: flex; justify-content: center; gap: 10px; }
     .thumbs img { width: 70px; height: 70px; border-radius: 6px; border: 2px solid transparent; cursor: pointer; object-fit: cover; }
     .thumbs img.active, .thumbs img:hover { border-color: #0070f3; transform: scale(1.05);}
@@ -31,7 +39,6 @@
     .section h2 { color: #232f3e; }
     .product-info-table { width: 100%; border-collapse: collapse; }
     .product-info-table td { padding: 8px 6px; border-bottom: 1px solid #eee; }
-    /* Star rating */
     .rating-stars { font-size: 1.4rem; color: #ccc; cursor: pointer; }
     .rating-stars span.active { color: #fbb034; }
     .review-section { margin-top: 1.4rem; }
@@ -43,13 +50,133 @@
     .comparison-table th, .comparison-table td { padding: 8px 12px; border: 1px solid #e2e4ea; font-size: 1rem;}
     .comparison-table th { background: #f1f3f5; color: #232f3e; }
     .prod-compare-link { color: #0070f3; text-decoration: underline; cursor: pointer;}
-    @media (max-width: 820px) { .product-layout { flex-direction: column; } }
+.img-modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100vw; height: 100vh;
+  background: rgba(40,48,64,0.85);
+  align-items: center; justify-content: center;
+}
+
+.img-modal-center {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-modal img {
+  max-width: 98vw;
+  max-height: 95vh;
+  object-fit: contain;
+  border-radius: 14px;
+  box-shadow: 0 0 60px #222b;
+  background: #fff;
+  display: block;
+  margin: 0;
+}
+
+.img-modal-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  background: #222d;
+  border: none;
+  font-size: 2.4rem;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0.93;
+  transition: background .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-modal-arrow.left {
+  left: -58px;
+}
+
+.img-modal-arrow.right {
+  right: -58px;
+}
+
+.img-modal-close {
+  position: absolute;
+  top: -18px;
+  right: -18px;
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: bold;
+  background: #222f;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  z-index: 11;
+  opacity: 0.95;
+  transition: background .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .img-modal-arrow.left { left: -32px; }
+  .img-modal-arrow.right { right: -32px; }
+  .img-modal img {
+    max-width: 96vw;
+    max-height: 80vh;
+  }
+  .img-modal-close {
+    top: -12px;
+    right: -12px;
+    width: 33px;
+    height: 33px;
+    font-size: 1.3rem;
+  }
+}
+.img-modal-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  background: #222d;
+  border: none;
+  font-size: 2.4rem;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0.9;
+  transition: background .2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   </style>
 </head>
 <body>
 <div class="header">
   <h1>MyShop</h1>
   <button onclick="history.back()">← Back</button>
+</div>
+
+<!-- ZOOM Modal -->
+<div id="imgModal" class="img-modal">
+  <div class="img-modal-center">
+    <button class="img-modal-arrow left" onclick="moveModalImg(-1)">&#8592;</button>
+    <img id="zoomImg" src="" alt="Zoomed Image" />
+    <button class="img-modal-arrow right" onclick="moveModalImg(1)">&#8594;</button>
+    <button class="img-modal-close" onclick="closeModal()">&times;</button>
+  </div>
 </div>
 
 <main>
@@ -92,6 +219,11 @@
         <th>Price</th>
         <th>Stock</th>
         <th>Rating</th>
+        <th>SKU</th>
+        <th>Weight</th>
+        <th>Dimensions</th>
+        <th>GST</th>
+        <th>MRP</th>
         <th></th>
       </tr>
       </thead>
@@ -122,17 +254,17 @@
     'https://wamqheltqmufuzrqlxlb.supabase.co',
     'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
   );
-
   const productId = new URLSearchParams(window.location.search).get('id');
   let productData = null;
   let customerId = null;
   let profileName = null;
+let zoomImages = [];
+let zoomIndex = 0;
 
   async function loadProduct() {
     const { data, error } = await supabase
       .from('products')
-      .select(`*, profiles(name),
-      categories:category_id(name)`)
+      .select(`*, profiles(name), categories:category_id(name)`)
       .eq('id', productId)
       .single();
     if (error || !data) {
@@ -142,11 +274,10 @@
     productData = data;
     displayProduct(data);
     await loadReviews();
-    loadComparison(data.category, data.id);
+    loadComparison(data.category_id, data.id);
    }
 
   function displayProduct(p) {
-
     document.getElementById('prodName').textContent = p.name;
     document.getElementById('prodPrice').textContent = "₹" + p.price;
     document.getElementById('prodDesc').textContent = p.description || 'No description available.';
@@ -161,29 +292,78 @@
     const main = document.getElementById('mainImage');
     const thumbs = document.getElementById('thumbs');
     main.src = images[0];
-    thumbs.innerHTML = '';
-    images.forEach((img, i) => {
-      let thumb = document.createElement('img');
-      thumb.src = img;
-      if (i === 0) thumb.classList.add('active');
-      thumb.onclick = () => {
-        main.src = img;
-        thumbs.querySelectorAll('img').forEach(x => x.classList.remove('active'));
-        thumb.classList.add('active');
-      };
-      thumbs.appendChild(thumb);
-    });
+    // Save images for modal navigation
+zoomImages = images;
+
+// Correct opening: pass index to openModal(i)
+main.onclick = () => openModal(0);
+thumbs.innerHTML = '';
+images.forEach((img, i) => {
+  let thumb = document.createElement('img');
+  thumb.src = img;
+  if (i === 0) thumb.classList.add('active');
+  thumb.onclick = () => {
+    main.src = img;
+    thumbs.querySelectorAll('img').forEach(x => x.classList.remove('active'));
+    thumb.classList.add('active');
+    main.onclick = () => openModal(i);
+  };
+  thumbs.appendChild(thumb);
+});
+
+    // Parse dimension fields
+    let dimStr = '-';
+    if (p.dimensions) {
+      try {
+        const dims = typeof p.dimensions === 'string' ? JSON.parse(p.dimensions) : p.dimensions;
+        dimStr = `L:${dims.length ?? '-'} W:${dims.width ?? '-'} H:${dims.height ?? '-'}`;
+      } catch { dimStr = '-'; }
+    }
 
     const specs = document.getElementById('specsTable');
     specs.innerHTML = `
       <tr><td><b>Product ID</b></td><td>${p.id}</td></tr>
-    <tr><td><b>Category</b></td><td>${p.categories?.name || '-'}</td></tr>
-    <tr><td><b>Accept COD</b></td><td>${p.accept_cod ? 'Yes' : 'No'}</td></tr>
+      <tr><td><b>Category</b></td><td>${p.categories?.name || '-'}</td></tr>
+      <tr><td><b>Accept COD</b></td><td>${p.accept_cod ? 'Yes' : 'No'}</td></tr>
       <tr><td><b>Available Stock</b></td><td>${p.stock}</td></tr>
       <tr><td><b>HSN Code</b></td><td>${p.hsn_code || '-'}</td></tr>
+      <tr><td><b>SKU</b></td><td>${p.sku || '-'}</td></tr>
+      <tr><td><b>Weight</b></td><td>${p.weight !== null && p.weight !== undefined ? p.weight + ' kg' : '-'}</td></tr>
+      <tr><td><b>Dimensions</b></td><td>${dimStr}</td></tr>
+      <tr><td><b>GST Rate</b></td><td>${p.gst_rate !== null && p.gst_rate !== undefined ? p.gst_rate + '%' : '-'}</td></tr>
+      <tr><td><b>MRP</b></td><td>${p.mrp !== null && p.mrp !== undefined ? '₹' + p.mrp : '-'}</td></tr>
       <tr><td><b>Featured</b></td><td>${p.featured ? 'Yes' : 'No'}</td></tr>
     `;
   }
+
+function openModal(idx) {
+  zoomIndex = idx;
+  document.getElementById('imgModal').style.display = 'flex';
+  showZoomImg();
+}
+function closeModal() {
+  document.getElementById('imgModal').style.display = 'none';
+  document.getElementById('zoomImg').src = '';
+}
+function showZoomImg() {
+  document.getElementById('zoomImg').src = zoomImages[zoomIndex];
+}
+function moveModalImg(change) {
+  if (!zoomImages.length) return;
+  zoomIndex = (zoomIndex + change + zoomImages.length) % zoomImages.length;
+  showZoomImg();
+}
+// Close modal on Escape or click outside
+document.getElementById('imgModal').addEventListener('click', function(e){
+  if(e.target === this) closeModal();
+});
+document.addEventListener('keydown', function(e){
+  if (document.getElementById('imgModal').style.display === 'flex') {
+    if(e.key === "Escape") closeModal();
+    else if (e.key === "ArrowLeft") moveModalImg(-1);
+    else if (e.key === "ArrowRight") moveModalImg(1);
+  }
+});
 
   document.getElementById('addToCartBtn').onclick = async () => {
     if (!productData || productData.stock <= 0) return alert("Product out of stock!");
@@ -195,7 +375,7 @@
     alert('Product added to cart!');
   };
 
-  // ------------------- Review Section -----------------------
+  // .............. Review Section ............
   let selectedRating = 0;
   const stars = document.querySelectorAll('#ratingStars span');
   stars.forEach(s => {
@@ -212,7 +392,6 @@
     if (!user.user) return alert("Please login first.");
     customerId = user.user.id;
 
-    // get customer profile name
     let username = profileName;
     if (!username) {
       const { data: profile } = await supabase.from('profiles').select('name').eq('id', customerId).single();
@@ -220,7 +399,6 @@
       profileName = username;
     }
 
-    // Check if user already reviewed
     const { data: prev } = await supabase
       .from('product_reviews')
       .select('*')
@@ -239,7 +417,6 @@
   };
 
   async function loadReviews() {
-    // Get all reviews with profile name
     const { data, error } = await supabase
       .from('product_reviews')
       .select('rating,review,created_at,customer_id,profiles(name)')
@@ -265,26 +442,32 @@
     });
     let avg = (total / reviews.length).toFixed(2);
     document.getElementById('avgRating').textContent = `Average: ${avg}/5 (${reviews.length} reviews)`;
-    // Optionally: update summary rating in products table for fast access
     await supabase.from('products').update({ rating: avg, review_count: reviews.length }).eq('id', productId);
   }
 
-  // ---------------------- Product Comparison Section -------------------------
-  async function loadComparison(category, skipProductId) {
+  // .......... Comparison Section ..........
+  async function loadComparison(categoryId, skipProductId) {
     const { data, error } = await supabase
       .from('products')
-      .select('id,name,price,stock,profiles(name),rating')
-      .eq('category', category)
+      .select('*')
+      .eq('category_id', categoryId)
       .neq('id', skipProductId)
       .limit(5);
     const comparison = data || [];
     const tbody = document.querySelector('#comparisonTable tbody');
     tbody.innerHTML = '';
     if (!comparison.length) {
-      tbody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No other products to compare.</td></tr>`;
+      tbody.innerHTML = `<tr><td colspan="11" style="text-align:center;">No other products to compare.</td></tr>`;
       return;
     }
     comparison.forEach(prod => {
+      let dimStr = '-';
+      if (prod.dimensions) {
+        try {
+          const dims = typeof prod.dimensions === 'string' ? JSON.parse(prod.dimensions) : prod.dimensions;
+          dimStr = `L:${dims.length ?? '-'} W:${dims.width ?? '-'} H:${dims.height ?? '-'}`;
+        } catch { dimStr = '-'; }
+      }
       const tr = document.createElement('tr');
       tr.innerHTML = `
         <td>${prod.name}</td>
@@ -292,6 +475,11 @@
         <td>₹${prod.price}</td>
         <td>${prod.stock > 0 ? 'In Stock' : 'Out of Stock'}</td>
         <td>${prod.rating ? prod.rating + '/5' : '-'}</td>
+        <td>${prod.sku || '-'}</td>
+        <td>${prod.weight !== null && prod.weight !== undefined ? prod.weight + ' kg' : '-'}</td>
+        <td>${dimStr}</td>
+        <td>${prod.gst_rate !== null && prod.gst_rate !== undefined ? prod.gst_rate + '%' : '-'}</td>
+        <td>${prod.mrp !== null && prod.mrp !== undefined ? '₹' + prod.mrp : '-'}</td>
         <td><a class="prod-compare-link" href="productdesc.html?id=${prod.id}">View</a></td>
       `;
       tbody.appendChild(tr);
