--- a/returnrequest.html
+++ b/returnrequest.html
@@ -44,7 +44,6 @@
     .order-card:hover {
       box-shadow: 0 6px 26px 0 rgba(60,100,180,0.11);
     }
-
     .order-info {
       flex: 1 1 290px;
       display: flex;
@@ -97,7 +96,6 @@
     .cancelled, .returned { background: #bb2222; }
     .shipped { background: #ce9101; color: #111; }
     .default-badge { background: #a2afc0; }
-
     .order-actions {
       flex: 1 1 220px;
       display: flex;
@@ -117,7 +115,6 @@
       transition: border-color 0.14s;
     }
     textarea:focus { border-color: #0070f3; }
-
     .action-btn {
       background: linear-gradient(90deg, #fa7517 40%, #FFD600 100%);
       color: #232f3e;
@@ -237,12 +234,21 @@
     msg.textContent = "";
     const today = new Date();
 
+    // Supabase public bucket URL prefix for product images
+    const baseStorageUrl = "https://wamqheltqmufuzrqlxlb.supabase.co/storage/v1/object/public/products/";
+
     items.forEach(item => {
-      // For product image (if available) else use a placeholder
-      const imgSrc = item.products?.image_url || "https://via.placeholder.com/70x70.png?text=Product";
+      // Build the product image URL (prepend base URL if necessary)
+      const imgSrc = item.products?.image_url
+        ? (item.products.image_url.startsWith("http")
+            ? item.products.image_url
+            : baseStorageUrl + item.products.image_url)
+        : "https://via.placeholder.com/128";
+
+      const altText = item.products?.name || "Product";
 
       const delivered = item.delivery_status === "delivered";
-      const deliveredAt = item.orders?.created_at ? new Date(item.orders.created_at) : null; // Use delivered_at if you track per-item!
+      const deliveredAt = item.orders?.created_at ? new Date(item.orders.created_at) : null;
       const daysSinceDelivered = deliveredAt ? Math.floor((today - deliveredAt) / (1000 * 60 * 60 * 24)) : null;
       const withinReturnWindow = delivered && deliveredAt && (daysSinceDelivered <= 3);
 
@@ -254,9 +260,9 @@
 
       card.innerHTML = `
         <div class="order-info">
-          <img src="${imgSrc}" class="product-img" alt="Product"/>
+          <img src="${imgSrc}" class="product-img" alt="${altText}" />
           <div class="details">
-            <div class="product-title">${item.products?.name || "Product"}</div>
+            <div class="product-title">${altText}</div>
             <div class="tiny">Order #${item.order_id}</div>
             <div class="tiny">Ordered on ${item.orders?.created_at ? new Date(item.orders.created_at).toLocaleDateString() : '-'}</div>
             <div class="quantity">Qty: ${item.quantity}</div>
