--- a/seller_order.html
+++ b/seller_order.html
@@ -37,10 +37,14 @@
     .paid-via-cod-badge { background: #d65108;}
     .modal { display:none; position:fixed; top:10%; left:50%; transform:translateX(-50%); background:white; padding:20px; border-radius:8px; box-shadow:0 0 15px rgba(0,0,0,0.3); max-width:600px; max-height:80vh; overflow:auto; z-index:100;}
     .modal-header { font-weight:bold; font-size:20px; margin-bottom:10px;}
-    .modal-close { float:right; background:none; border:none; font-size:22px; cursor:pointer;}
+    .modal-close { float:right; background:none; border:none; font-size:22px; cursor:pointer; color: red;           /* Make close button red */
+  font-weight: bold;    /* Make it bold for better visibility */
+  text-shadow: 0 0 2px black; }
     .modal-print { float:right; margin-right:10px; background:#0070f3; color:#fff; border:none; border-radius:5px; font-size:15px; padding:5px 14px; cursor:pointer; }
     .modal-content { clear:both; margin-top:8px;}
-    .modal-extra-close { display:block; margin:20px auto 0 auto; background:#f9a825; color:#fff; border:none; border-radius:5px; font-size:16px; padding:7px 38px; cursor:pointer;}
+    .modal-extra-close { display:block; margin:20px auto 0 auto; background:#f9a825; color:#fff; border:none; border-radius:5px; font-size:16px; padding:7px 38px; cursor:pointer; color: red;           /* Make close button red */
+  font-weight: bold;    /* Make it bold for better visibility */
+  text-shadow: 0 0 2px black; }
     .prod-status-ind { padding:2px 8px; border-radius:5px; margin-right:3px; font-size:0.98em;}
     .prod-status-placed{background:#bfc3cb;color:#444;}
     .prod-status-shipped{background:#6c63ff;color:#fff;}
@@ -212,7 +216,7 @@
           <span class="delivery-status-badge status-${overallStatus}">${overallStatus.charAt(0).toUpperCase() + overallStatus.slice(1)}</span>
           ${paymentStatus}
         </td>
-        <td>${new Date(order.created_at).toLocaleString()}</td>
+        <td>${new Date(order.created_at).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' })}</td>
         <td>${itemCodes}</td>
         <td></td>
       `;
@@ -239,7 +243,7 @@
     );
     let html = `
       <div><strong>Order ID:</strong> ${order.id}</div>
-      <div><strong>Date:</strong> ${new Date(order.created_at).toLocaleString()}</div>
+      <div><strong>Date:</strong> ${new Date(order.created_at).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' })}</div>
       <div><strong>Customer Name:</strong> ${order.profiles.name || ''}</div>
       <div><strong>Email:</strong> ${order.profiles.email || ''}</div>
       <div><strong>Phone:</strong> ${order.profiles.phone || '-'}</div>
@@ -267,21 +271,23 @@
       if (DELIVERY_STATUSES.includes(statusText)) prodStatusClass += ` prod-status-${statusText}`;
       else prodStatusClass += ` prod-status-pending`;
 
-      // Next delivery step
-      let nextStepIdx = Math.min(DELIVERY_STATUSES.indexOf(statusText)+1, DELIVERY_STATUSES.length-1);
-      let availableBtns = '';
-      if (statusText !== "delivered") {
-        for (let i = DELIVERY_STATUSES.indexOf(statusText)+1;
-          i <= DELIVERY_STATUSES.length-1; i++) {
-          let step = DELIVERY_STATUSES[i];
-          let btnClass = {
-            shipped:"btn-shipped",couriered:"btn-couriered",
-            dispatched:"btn-dispatched",delivered:"btn-delivered"
-          }[step] || "btn-confirm";
-          availableBtns += `<button class="${btnClass}" onclick="updateDeliveryStatus(${item.id},'${step}')">${"Mark "+step.charAt(0).toUpperCase()+step.slice(1)}</button>`;
-          break; // Show only next step for clarity (for strict step flow)
-        }
-      }
+ // Next delivery step
+let availableBtns = '';
+if (statusText !== "delivered" && statusText !== "cancelled") { // Don't allow changes if cancelled
+  for (let i = DELIVERY_STATUSES.indexOf(statusText) + 1; i < DELIVERY_STATUSES.length; i++) {
+    let step = DELIVERY_STATUSES[i];
+    let btnClass = {
+      shipped: "btn-shipped",
+      couriered: "btn-couriered",
+      dispatched: "btn-dispatched",
+      delivered: "btn-delivered"
+    }[step] || "btn-confirm";
+
+    availableBtns += `<button class="${btnClass}" onclick="updateDeliveryStatus(${item.id},'${step}')">${"Mark " + step.charAt(0).toUpperCase() + step.slice(1)}</button>`;
+    break; // only show the next step button
+  }
+}
+
 
       // Payment/COD Section
       let paymentSection = "-";
@@ -322,6 +328,8 @@
 
     document.getElementById('delivery-html').innerHTML = html;
     document.getElementById('delivery-modal').style.display = 'block';
+
+
   }
 
   window.updateDeliveryStatus = async function(orderItemId, nextStatus) {
@@ -397,102 +405,161 @@
   }
 
   async function showInvoice(orderId, sellerId) {
-    const { data: order, error } = await supabase.from('orders')
-      .select(`
-        id,
-        total,
+  const { data: order, error } = await supabase.from('orders')
+    .select(`
+      id,
+      total,
+      status,
+      created_at,
+      profiles:customer_id(name, address, email, phone),
+      order_items(
+        quantity,
+        price,
+        gst_rate,
+        hsn_code,
         status,
-        created_at,
-        profiles:customer_id(name, address, email, phone),
-        order_items(
-          quantity,
-          price,
-          hsn_code,
-          status,
-          delivery_status,
-          cod_payment_status,
-          courier_name,
-          courier_tracking_number,
-          courier_tracking_url,
-          products(name, seller_id),
-          profiles_seller: seller_id(id, name, address, email, gst_number, pan_number, phone)
-        )
-      `)
-      .eq('id', orderId)
-      .single();
+        delivery_status,
+        cod_payment_status,
+        courier_name,
+        courier_tracking_number,
+        courier_tracking_url,
+        products(name, seller_id),
+        profiles_seller: seller_id(id, name, address, email, gst_number, pan_number, phone)
+      )
+    `)
+    .eq('id', orderId)
+    .single();
 
-    if (error) {
-      showStatusMessage('Failed to load invoice: ' + error.message, '#ffeded', '#a10021');
-      return;
-    }
-
-    // Filter to seller's items
-    const filteredItems = order.order_items.filter(
-      item => item.profiles_seller && item.profiles_seller.id === sellerId
-    );
-
-    let sellerInfo = filteredItems[0]?.profiles_seller || {};
-    let statusDisplay = (order.status === 'delivered')
-      ? '<span style="color:green;font-weight:bold;">Delivered & Paid</span>'
-      : order.status.charAt(0).toUpperCase() + order.status.slice(1);
-
-    let html = `
-      <h2>Invoice #${order.id}</h2>
-      <h3>Status: ${statusDisplay}</h3>
-      <h3>Date: ${new Date(order.created_at).toLocaleString()}</h3>
-      <hr>
-      <h4>Seller Info</h4>
-      <div>Name: ${sellerInfo.name || ''}</div>
-      <div>Email: ${sellerInfo.email || ''}</div>
-      <div>Phone: ${sellerInfo.phone || '-'}</div>
-      <div>Address: ${sellerInfo.address || ''}</div>
-      <div>GST Number: ${sellerInfo.gst_number || ''}</div>
-      <div>PAN Number: ${sellerInfo.pan_number || ''}</div>
-      <hr>
-      <h4>Customer Info</h4>
-      <div>Name: ${order.profiles.name || ''}</div>
-      <div>Email: ${order.profiles.email || ''}</div>
-      <div>Phone: ${order.profiles.phone || '-'}</div>
-      <div>Address: ${order.profiles.address || ''}</div>
-      <hr>
-      <table border="1" cellpadding="4" cellspacing="0" width="100%">
-        <thead>
-          <tr><th>Product</th><th>HSN Code</th><th>Qty</th><th>Unit Price</th><th>Total</th><th>Delivery Status</th><th>Payment (COD)</th><th>Tracking Info</th></tr>
-        </thead>
-        <tbody>
-    `;
-    filteredItems.forEach(item => {
-      let prodStatusClass = "prod-status-ind";
-      let statusText = (item.delivery_status || item.status || "pending");
-      if (DELIVERY_STATUSES.includes(statusText)) prodStatusClass += ` prod-status-${statusText}`;
-      else prodStatusClass += ` prod-status-pending`;
-      let paymentBadge = (item.cod_payment_status==="paid")
-        ? '<span class="paid-badge">COD Paid</span>'
-        : '<span class="cod-badge">COD Pending</span>';
-      let trackingHtml = '-';
-      if (item.courier_tracking_number) {
-        let trackingLink = item.courier_tracking_url ?
-          `<a href="${item.courier_tracking_url}" target="_blank" rel="noopener" class="tracking-link">${item.courier_tracking_number}</a>`
-          : item.courier_tracking_number;
-        trackingHtml = `${item.courier_name || ''}<br>${trackingLink}`;
-      }
-      html += `<tr>
-        <td>${item.products.name}</td>
-        <td>${item.hsn_code || '-'}</td>
-        <td>${item.quantity}</td>
-        <td>₹${item.price}</td>
-        <td>₹${item.price * item.quantity}</td>
-        <td><span class="${prodStatusClass}">${statusText.charAt(0).toUpperCase()+statusText.slice(1)}</span></td>
-        <td>${paymentBadge}</td>
-        <td>${trackingHtml}</td>
-      </tr>`;
-    });
-    const total = filteredItems.reduce((sum, i) => sum + (i.quantity * i.price), 0);
-    html += `</tbody></table><hr><h3>Total: ₹${total}</h3>`;
-
-    document.getElementById('invoice-html').innerHTML = html;
-    document.getElementById('invoice-modal').style.display = 'block';
+  if (error) {
+    showStatusMessage('Failed to load invoice: ' + error.message, '#ffeded', '#a10021');
+    return;
   }
+
+  const filteredItems = order.order_items.filter(
+    item => item.profiles_seller && item.profiles_seller.id === sellerId
+  );
+
+  let sellerInfo = filteredItems[0]?.profiles_seller || {};
+  let statusDisplay = (order.status === 'delivered')
+    ? '<span style="color:green;font-weight:bold;">Delivered & Paid</span>'
+    : order.status.charAt(0).toUpperCase() + order.status.slice(1);
+
+  let html = `
+  <style>
+    .invoice-watermark {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 400px;
+      height: 400px;
+      opacity: 0.07;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      pointer-events: none;
+      background: url('logo_trolley_myshop_bright.png') no-repeat center;
+      background-size: contain;
+    }
+    .invoice-content {
+      position: relative;
+      z-index: 1;
+    }
+    .invoice-logo {
+      max-width: 140px;
+      margin-bottom: 16px;
+    }
+  </style>
+  <div class="invoice-watermark"></div>
+  <div class="invoice-content">
+    <img src="logo_trolley_myshop_bright.png" alt="MyShop Logo" class="invoice-logo" />
+    <h2>Invoice #${order.id}</h2>
+    <h3>Status: ${statusDisplay}</h3>
+    <h3>Date: ${new Date(order.created_at).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' })}</h3>
+    <hr>
+    <h4>Seller Info</h4>
+    <div>Name: ${sellerInfo.name || ''}</div>
+    <div>Email: ${sellerInfo.email || ''}</div>
+    <div>Phone: ${sellerInfo.phone || '-'}</div>
+    <div>Address: ${sellerInfo.address || ''}</div>
+    <div>GST Number: ${sellerInfo.gst_number || ''}</div>
+    <div>PAN Number: ${sellerInfo.pan_number || ''}</div>
+    <hr>
+    <h4>Customer Info</h4>
+    <div>Name: ${order.profiles.name || ''}</div>
+    <div>Email: ${order.profiles.email || ''}</div>
+    <div>Phone: ${order.profiles.phone || '-'}</div>
+    <div>Address: ${order.profiles.address || ''}</div>
+    <hr>
+    <table border="1" cellpadding="4" cellspacing="0" width="100%">
+      <thead>
+        <tr>
+          <th>Product</th><th>HSN Code</th><th>Qty</th><th>Unit Price</th><th>Total</th><th>CGST</th><th>SGST</th><th>Delivery Status</th><th>Payment (COD)</th><th>Tracking Info</th>
+        </tr>
+      </thead>
+      <tbody>
+  `;
+
+  let grandTotal = 0;
+  let totalCGST = 0;
+  let totalSGST = 0;
+
+  filteredItems.forEach(item => {
+  let prodStatusClass = "prod-status-ind";
+  let statusText = (item.delivery_status || item.status || "pending");
+  if (DELIVERY_STATUSES.includes(statusText)) prodStatusClass += ` prod-status-${statusText}`;
+  else prodStatusClass += ` prod-status-pending`;
+
+  const qty = item.quantity;
+  const priceIncGST = item.price;  // price inclusive GST
+  const gstRate = item.gst_rate || 0;
+
+  // Calculate base price and GST
+  const basePrice = priceIncGST / (1 + gstRate / 100);
+  const gstPerUnit = priceIncGST - basePrice;
+
+  const lineTotalIncGST = priceIncGST * qty;
+  const lineBaseTotal = basePrice * qty;
+  const gstTotal = gstPerUnit * qty;
+  const cgst = gstTotal / 2;
+  const sgst = gstTotal / 2;
+
+  grandTotal += lineBaseTotal;
+  totalCGST += cgst;
+  totalSGST += sgst;
+
+  let paymentBadge = (item.cod_payment_status === "paid")
+    ? '<span class="paid-badge">COD Paid</span>'
+    : '<span class="cod-badge">COD Pending</span>';
+
+  let trackingHtml = '-';
+  if (item.courier_tracking_number) {
+    let trackingLink = item.courier_tracking_url ?
+      `<a href="${item.courier_tracking_url}" target="_blank" rel="noopener" class="tracking-link">${item.courier_tracking_number}</a>`
+      : item.courier_tracking_number;
+    trackingHtml = `${item.courier_name || ''}<br>${trackingLink}`;
+  }
+
+  html += `<tr>
+    <td>${item.products.name}</td>
+    <td>${item.hsn_code || '-'}</td>
+    <td>${qty}</td>
+    <td>₹${priceIncGST.toFixed(2)}</td>
+    <td>₹${lineTotalIncGST.toFixed(2)}</td>
+    <td>₹${cgst.toFixed(2)}</td>
+    <td>₹${sgst.toFixed(2)}</td>
+    <td><span class="${prodStatusClass}">${statusText.charAt(0).toUpperCase()+statusText.slice(1)}</span></td>
+    <td>${paymentBadge}</td>
+    <td>${trackingHtml}</td>
+  </tr>`;
+});
+html += `</tbody></table><hr>
+  <h3>Sub Total (Excl. GST): ₹${grandTotal.toFixed(2)}</h3>
+  <h3>Total CGST: ₹${totalCGST.toFixed(2)}</h3>
+  <h3>Total SGST: ₹${totalSGST.toFixed(2)}</h3>
+  <h3>Grand Total (Incl. GST): ₹${(grandTotal + totalCGST + totalSGST).toFixed(2)}</h3>`;
+
+  document.getElementById('invoice-html').innerHTML = html;
+  document.getElementById('invoice-modal').style.display = 'block';
+}
 
   document.getElementById('close-invoice').onclick = closeInvoice;
   document.getElementById('modal-extra-close-btn').onclick = closeInvoice;
