Replace existing files with updated version

--- a/cart.html
+++ b/cart.html
@@ -243,7 +243,7 @@
     }
 
     const options = {
-      key: 'rzp_test_RWfoVf4VK0sQaK',
+      key: 'rzp_live_RS6JXqKrLXCdOh',
       amount: latestTotal * 100,
       currency: 'INR',
       name: 'MyShop',
