--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login - MyShop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -13,24 +13,20 @@
       align-items: center;
       height: 100vh;
     }
-    #login-form,
-    #reset-form {
+    #login-form, #reset-form {
       background: white;
       padding: 2rem;
       border-radius: 10px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
       max-width: 360px;
       width: 100%;
     }
-    #login-form h2,
-    #reset-form h2 {
+    #login-form h2, #reset-form h2 {
       margin-bottom: 1rem;
       color: #0070f3;
       text-align: center;
     }
-    input,
-    select,
-    button {
+    input, select, button {
       width: 100%;
       padding: 0.8rem;
       margin: 0.5rem 0 1rem 0;
@@ -46,19 +42,9 @@
       cursor: pointer;
       transition: background-color 0.25s ease;
     }
-    button:hover {
-      background-color: #005bb5;
-    }
-    .error {
-      color: #e74c3c;
-      margin-bottom: 1rem;
-      font-weight: bold;
-    }
-    .success {
-      color: #27ae60;
-      margin-bottom: 1rem;
-      font-weight: bold;
-    }
+    button:hover { background-color: #005bb5; }
+    .error { color: #e74c3c; margin-bottom: 1rem; font-weight: bold; }
+    .success { color: #27ae60; margin-bottom: 1rem; font-weight: bold; }
     .link {
       color: #0070f3;
       text-align: right;
@@ -67,40 +53,23 @@
       text-decoration: underline;
       cursor: pointer;
     }
-    #google-login {
-      background-color: #db4437; /* Google red */
-      margin-top: 0;
-    }
-    #google-login:hover {
-      background-color: #a33d2d;
-    }
-    /* Forgot password modal */
+    #google-login { background-color: #db4437; margin-top: 0; }
+    #google-login:hover { background-color: #a33d2d; }
     #forgot-modal {
       display: none;
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: #0008;
-      justify-content: center;
-      align-items: center;
-      z-index: 2;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      background: #0008; justify-content: center; align-items: center; z-index: 2;
     }
     #forgot-form {
       background: white;
       padding: 2rem;
       border-radius: 10px;
-      max-width: 340px;
-      width: 100%;
+      max-width: 340px; width: 100%;
       box-shadow: 0 4px 16px #0002;
-      display: flex;
-      flex-direction: column;
+      display: flex; flex-direction: column;
     }
-    #forgot-form h3 {
-      color: #0070f3;
-      margin-bottom: 0.8rem;
-    }
+    #forgot-form h3 { color: #0070f3; margin-bottom: 0.8rem; }
   </style>
 </head>
 <body>
@@ -121,7 +90,6 @@
   <div class="link" onclick="window.location.href='signup.html'">New user? Sign up</div>
 </form>
 
-<!-- Forgot Password Modal -->
 <div id="forgot-modal">
   <form id="forgot-form">
     <h3>Reset Password</h3>
@@ -132,7 +100,6 @@
   </form>
 </div>
 
-<!-- Hidden Reset Password Form for Access Token -->
 <div id="reset-container" style="display: none;">
   <form id="reset-form">
     <h2>Set New Password</h2>
@@ -142,21 +109,80 @@
   </form>
 </div>
 
-<!-- ...Keep your existing HTML and CSS... -->
-
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-  window.onload = function () {
-    const supabase = window.supabase.createClient(
-      'https://wamqheltqmufuzrqlxlb.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
-    );
+  const SUPABASE_URL = 'https://wamqheltqmufuzrqlxlb.supabase.co';
+  const SUPABASE_KEY =   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
 
+  window.onload = async function() {
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
     const loginForm = document.getElementById('login-form');
     const messageDiv = document.getElementById('message');
 
-    // Improved login handler
-    loginForm.onsubmit = async function (e) {
+    function showToast(message, isSuccess = true) {
+      return new Promise((resolve) => {
+        const toast = document.createElement('div');
+        toast.textContent = message;
+        toast.style.position = 'fixed';
+        toast.style.bottom = '20px';
+        toast.style.right = '20px';
+        toast.style.padding = '10px 20px';
+        toast.style.backgroundColor = isSuccess ? '#27ae60' : '#e74c3c';
+        toast.style.color = 'white';
+        toast.style.borderRadius = '5px';
+        toast.style.fontWeight = 'bold';
+        toast.style.zIndex = 10000;
+        document.body.appendChild(toast);
+        setTimeout(() => {
+          document.body.removeChild(toast);
+          resolve();
+        }, 3000);
+      });
+    }
+
+    async function handleUserRedirect(user) {
+      if (!user) return;
+      if (!user.email_confirmed_at) {
+        await showToast('Please verify your email before continuing.', false);
+        return;
+      }
+      await showToast('Email verified. Logging you in...');
+      const { data: profile, error } = await supabase
+        .from('profiles')
+        .select('role')
+        .eq('email', user.email)
+        .maybeSingle();
+      if (error) {
+        console.error('Error fetching profile:', error);
+        return;
+      }
+      if (profile && profile.role === 'seller') {
+        window.location.href = 'seller.html';
+      } else if (profile && profile.role === 'customer') {
+        window.location.href = 'custdashboard.html';
+      } else {
+        await supabase.from('profiles').insert([
+          {
+            id: user.id,
+            name: user.user_metadata.full_name || user.email,
+            email: user.email,
+            role: 'customer',
+            created_at: new Date(),
+          },
+        ]);
+        window.location.href = 'custdashboard.html';
+      }
+    }
+
+    // Check current user session and redirect if logged in
+    const { data: { user } } = await supabase.auth.getUser();
+    if (user) {
+      await handleUserRedirect(user);
+      return;
+    }
+
+    // Handle email/password login submission
+    loginForm.onsubmit = async (e) => {
       e.preventDefault();
       messageDiv.textContent = '';
       messageDiv.className = '';
@@ -168,14 +194,9 @@
       try {
         messageDiv.textContent = 'Signing in, please wait...';
         const { data, error } = await supabase.auth.signInWithPassword({ email, password });
-        if (error) {
-          messageDiv.textContent = 'Login failed: ' + error.message;
-          messageDiv.className = 'error';
-          return;
-        }
-        const user = data.user;
+        if (error) throw error;
 
-        // Check or insert profile with role
+        const user = data.user;
         const { data: profile, error: profileError } = await supabase
           .from('profiles')
           .select('role')
@@ -187,47 +208,51 @@
           messageDiv.className = 'error';
           return;
         }
-
         if (!profile) {
           await supabase.from('profiles').insert([
             {
               id: user.id,
               name,
               email,
-              role: role,
+              role,
               created_at: new Date(),
             },
           ]);
-          messageDiv.textContent = 'Login successful!';
-          messageDiv.className = 'success';
-          setTimeout(() => (window.location.href = role === 'seller' ? 'seller.html' : 'custdashboard.html'), 1500);
-        } else {
-          messageDiv.textContent = `Login successful as ${profile.role}.`;
-          messageDiv.className = 'success';
-          setTimeout(() => (window.location.href = profile.role === 'seller' ? 'seller.html' : 'custdashboard.html'), 1500);
         }
+
+        messageDiv.textContent = 'Login successful!';
+        messageDiv.className = 'success';
+
+        setTimeout(() => {
+          window.location.href = (profile && profile.role === 'seller') || role === 'seller'
+            ? 'seller.html' : 'custdashboard.html';
+        }, 1500);
+
       } catch (err) {
+        console.error('Login error:', err);
         messageDiv.textContent = 'Error: ' + err.message;
         messageDiv.className = 'error';
       }
     };
 
-    // Google OAuth login handler
-  document.getElementById('google-login').onclick = async function () {
-  try {
-    const { error } = await supabase.auth.signInWithOAuth({ provider: 'google' });
-    if (error) throw error;
-  } catch (err) {
-    alert('Google OAuth error: ' + err.message);
-  }
-};
+    // Google OAuth login button handler
+    document.getElementById('google-login').onclick = async function () {
+      try {
+        const { error } = await supabase.auth.signInWithOAuth({ provider: 'google' });
+        if (error) throw error;
+      } catch (err) {
+        alert('Google OAuth error: ' + err.message);
+      }
+    };
 
-    // Forgot password modal handlers
+   // Forgot password modal handlers
+
+
     const forgotModal = document.getElementById('forgot-modal');
     document.getElementById('forgot-link').onclick = () => (forgotModal.style.display = 'flex');
     document.getElementById('close-forgot').onclick = () => (forgotModal.style.display = 'none');
 
-    // Improved password reset handler
+    // Password reset handler
     document.getElementById('forgot-form').onsubmit = async function (e) {
       e.preventDefault();
       const email = document.getElementById('forgot-email').value.trim();
@@ -257,26 +282,21 @@
     showResetFormIfNeeded();
     window.addEventListener('hashchange', showResetFormIfNeeded);
 
-    // Improved password update flow
+    // Password update flow
     document.getElementById('reset-form').onsubmit = async function (e) {
       e.preventDefault();
       const newPassword = document.getElementById('new-password').value;
       const msg = document.getElementById('reset-message');
       msg.textContent = 'Updating password...';
       msg.className = '';
-
-      supabase.auth.onAuthStateChange(async (event) => {
-        if (event === 'PASSWORD_RECOVERY' || window.location.hash.includes('access_token')) {
-          const { error } = await supabase.auth.updateUser({ password: newPassword });
-          if (error) {
-            msg.textContent = 'Error: ' + error.message;
-            msg.className = 'error';
-          } else {
-            msg.textContent = 'Password updated successfully! You can now log in.';
-            msg.className = 'success';
-          }
-        }
-      });
+      const { error } = await supabase.auth.updateUser({ password: newPassword });
+      if (error) {
+        msg.textContent = 'Error: ' + error.message;
+        msg.className = 'error';
+      } else {
+        msg.textContent = 'Password updated successfully! You can now log in.';
+        msg.className = 'success';
+      }
     };
   };
 </script>
